fixed alignment of edit button on edit profile

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -351,7 +351,7 @@
   width: 100%;
   background: $white;
   border-radius: 25px;
-  box-shadow: 4px 4px 12px $gray;
+  box-shadow: 2px 1px 6px #b5e1b5;
   text-align: center; 
   margin-top: 50px;
   padding: 25px;
