--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -48,3 +48,7 @@
   text-decoration: none;
   background-color: $forest-light-transparent;
 }
+
+.navbar-link > a {
+  text-decoration: none;
+}
