--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -15,7 +15,7 @@
 
 .dashboard-content{
   margin-top: 25px;
-  border: 2px solid $grey;
+  box-shadow: 2px 1px 6px #b5e1b5;
   border-radius: 25px;
   width: 100%;
   padding: 25px;
